# ipa-research-data-science-hub

./: .codespell-ignore.txt  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  .vale.ini  404.html  404.md  CLAUDE.md  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  CONTRIBUTING.qmd  Dockerfile  Justfile  LICENSE.md  PAGE-TEMPLATE.qmd  README.md  _brand.yml  _environment.required  _quarto.yml  index.css  index.html  index.qmd  index_backup.html  index_backup.qmd  init.sh  page-template.qmd  progress-bar.html  pyproject.toml  robots.txt  search.json  sidebar-toggle.js  sitemap.xml  under-construction.html
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT  dependabot.yml  pull_request_template.md
_site/: index.html  search.json
assets/: dark-theme.scss  light-theme.scss  styles.css  title-block.html  toc.html
content/: SITE-TEMPLATE.qmd
data-cleaning/: data-aggregation.html  data-aggregation.qmd  dataset-documentation.html  dataset-documentation.qmd  index.html  index.qmd  raw-data-management.html  raw-data-management.qmd  variable-management.html  variable-management.qmd
data-collection/: admin-data.html  admin-data.qmd  in-person-surveys.html  index.html  index.qmd  phone-surveys.html  phone-surveys.qmd
data-quality/: accompany-surveyors.html  accompany-surveyors.qmd  action-plan.html  action-plan.qmd  aea-registry.html  aea-registry.qmd  backchecks.html  backchecks.qmd  bench-test.qmd  bench-testing.html  bench-testing.qmd  data-anonymization.html  data-anonymization.qmd  data-integrity.html  data-integrity.qmd  data-management-system.html  data-quality-action-plan.qmd  data-security-protocol.html  data-security-protocol.qmd  dqap.html  dqap.qmd  hfc.qmd  hfcs.html  hfcs.qmd  high-frequency-checks.html  high-frequency-checks.qmd  how-to-dms-stata.html  how-to-dms-stata.qmd  index.html  index.qmd  ipa-dms.html  ipa-dms.qmd  ipa-research-protocols.html  ipa-research-protocols.qmd  minimum-must-dos.qmd  mmds.qmd  pilot-survey.html  pilot-survey.qmd  survey-plan.html  survey-plan.qmd
docs/: MARKDOWN_STYLE.md  QUARTO_CUSTOM_RULES.md
ethics-irb/: index.html  index.qmd  ipa-irb.qmd  irb-docs.html  irb-faqs.html  irb-key-topics.html  irb-key-topics.qmd  irb-lifecycle.html  irb-lifecycle.qmd  irb-project-lifecycle.qmd  irb-reliance-agreements.html  irb-reliance-agreements.qmd  irb-review.html  irb-review.qmd  reliance-agreements.qmd
research-design/: how-to-power-calculation.html  how-to-power-calculation.qmd  how-to-randomization.html  how-to-randomization.qmd  index.html  index.qmd  measurement.html  measurement.qmd  randomization.html  (+5 more)
(+335 files in other folders)
