[project]
name = "ipa-research-data-science-hub"
version = "0.1.0"
description = "IPA Research & Data Science Hub"
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "altair>=5.5.0",
    "causaldata>=0.1.5",
    "duckdb>=1.1.3",
    "great-tables>=0.15.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "polars>=1.17.1",
    "pystata>=0.0.1",
    "seaborn>=0.13.2",
    "stata-setup>=0.1.3",
]


[tool.uv]
dev-dependencies = [
    "mdformat>=0.7.17,<0.8",
    "mdformat-config>=0.1.3,<0.3",
    "mdformat-frontmatter>=2.0.8,<3.0",
    "mdformat-gfm>=0.3.6,<0.5",
    "mdformat-pyproject>=0.0.1,<0.0.3",
    "ruff>=0.7.4,<0.9",
]

[tool.jupysql.SqlMagic]
feedback = 0
autopandas = false
autopolars = false
autolimit = 0
displaylimit = 10

[tool.ruff]
line-length = 88
fix = true
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# docs: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "D",   # flake8-docstrings
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

ignore = [
    # do not enable if formatting
    # docs: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab indentation
    "E111",   # indentation
    "E114",   # indentation
    "E117",   # over indented
    "D206",   # indent with spaces
    "D300",   # triple single quotes
    "E501",   # line length regulated by formatter
    "D105",   # missing docstring in magic method
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "SIM110", # Use all instead of `for` loop
    "TRY003", # Avoid specifying long messages outside the exception class
    "D205",   # 1 blank line required between summary line and description
    "D203",
    "D213",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.codespell]
#builtin = ["clear","rare","informal","usage","code","names"]
builtin = "clear,rare,informal,usage,code,names"
#ignore-words-list = ["uint"]
ignore-words-list = "adn,master,uint,wrod"
#skip=[ "./.*","codespell_lib/data/*","codespell_lib/tests/*"]
skip = "./.*,codespell_lib/data/*,codespell_lib/tests/*"

[tool.mdformat]
# docs: https://mdformat.readthedocs.io/en/stable/users/configuration_file.html
wrap = 88          # possible values: {"keep", "no", INTEGER}
number = false     # possible values: {false, true}
end_of_line = "lf" # possible values: {"lf", "crlf", "keep"}
